removed pricing and added phone analytics

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -60,7 +60,7 @@
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 
-    <script src="Site Templates/generalFunctions.js" defer></script>
+    <script src="Site Templates/generalFunctions.js"></script>
     <link rel="stylesheet" href="Site Templates/site-wide.css">
     <script src="pricing.js" defer></script>
 
@@ -103,7 +103,7 @@
           <!-- <li><a href="enroll.html">Enroll</a></li> -->
         </ul>
       </nav>
-      <div class="phone"><a href="tel:+13853000906"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M0 0h24v24H0z" fill="none"></path><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg> Call Now (385) 300-0906</a></div>
+      <div class="phone" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})"><a href="tel:+13853000906"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M0 0h24v24H0z" fill="none"></path><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg> Call Now (385) 300-0906</a></div>
     </header>
 
     <!-- start banner -->
@@ -458,13 +458,14 @@
           
           <div class="plans">
             <!-- English -->
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save $16">
+            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $16"> -->
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
               <div class="title">
                 <h3>English</h3>
-                <h4 class="recurring">$160</h4>
+                <!-- <h4 class="recurring">$160</h4>
                 <p class="recurring">2 payments of $40 and a $80 deposit**</p>
                 <h4 class="one-time">$144</h4>
-                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p>
+                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p> -->
               </div>
               <div class="length">
                 <h4>ACT Class</h4>
@@ -488,7 +489,7 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
                   <p>(385) 300-0906</p>
                 </a>
@@ -496,13 +497,14 @@
             </div>
 
             <!--Math -->
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save $16">
+            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $16"> -->
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
               <div class="title">
                 <h3>Math</h3>
-                <h4 class="recurring">$160</h4>
+                <!-- <h4 class="recurring">$160</h4>
                 <p class="recurring">2 payments of $40 and a $80 deposit**</p>
                 <h4 class="one-time">$144</h4>
-                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p>
+                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p> -->
               </div>
               <div class="length">
                 <h4>ACT Class</h4>
@@ -526,7 +528,7 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
                   <p>(385) 300-0906</p>
                 </a>
@@ -534,13 +536,14 @@
             </div>
 
             <!-- Reading -->
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save $16">
+            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $16"> -->
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
               <div class="title">
                 <h3>Reading</h3>
-                <h4 class="recurring">$160</h4>
+                <!-- <h4 class="recurring">$160</h4>
                 <p class="recurring">2 payments of $40 and a $80 deposit**</p>
                 <h4 class="one-time">$144</h4>
-                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p>
+                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p> -->
               </div>
               <div class="length">
                 <h4>ACT Class</h4>
@@ -564,7 +567,7 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
                   <p>(385) 300-0906</p>
                 </a>
@@ -572,13 +575,14 @@
             </div>
 
             <!-- Science -->
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save $16">
+            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $16"> -->
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
               <div class="title">
                 <h3>Science</h3>
-                <h4 class="recurring">$160</h4>
+                <!-- <h4 class="recurring">$160</h4>
                 <p class="recurring">2 payments of $40 and a $80 deposit**</p>
                 <h4 class="one-time">$144</h4>
-                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p>
+                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p> -->
               </div>
               <div class="length">
                 <h4>ACT Class</h4>
@@ -602,7 +606,7 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
                   <p>(385) 300-0906</p>
                 </a>
@@ -746,7 +750,7 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
                   <p>(385) 300-0906</p>
                 </a>
@@ -786,7 +790,7 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
                   <p>(385) 300-0906</p>
                 </a>
@@ -935,13 +939,14 @@
 
             <!-- Basics 8 weeks -->
 
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save $240">
+            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $240"> -->
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
               <div class="title">
                 <h3>4 points guaranteed*</h3>
-                <h4 class="recurring">$2400</h4>
+                <!-- <h4 class="recurring">$2400</h4>
                 <p class="recurring">14 payments of $150 and a $300 deposit**</p>
                 <h4 class="one-time">$2160</h4>
-                <p class="one-time">1 payment of $2160 which includes a $270 deposit**</p>
+                <p class="one-time">1 payment of $2160 which includes a $270 deposit**</p> -->
               </div>
               <div class="length">
                 <h4>Guided ACT</h4>
@@ -964,7 +969,7 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
                   <p>(385) 300-0906</p>
                 </a>
@@ -973,13 +978,14 @@
 
             <!-- Guided 6 weeks -->
 
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save $180">
+            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $180"> -->
+              <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
               <div class="title">
                 <h3>3 points guaranteed*</h3>
-                <h4 class="recurring">$1800</h4>
+                <!-- <h4 class="recurring">$1800</h4>
                 <p class="recurring">10 payments of $150 and a $300 deposit**</p>
                 <h4 class="one-time">$1620</h4>
-                <p class="one-time">1 payment of $1620 which includes a $270 deposit**</p>
+                <p class="one-time">1 payment of $1620 which includes a $270 deposit**</p> -->
               </div>
               <div class="length">
                 <h4>Guided ACT</h4>
@@ -1002,7 +1008,7 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
                   <p>(385) 300-0906</p>
                 </a>
@@ -1011,13 +1017,14 @@
 
             <!-- Guided 8 weeks -->
 
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save $120">
+            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $120"> -->
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
               <div class="title">
                 <h3>2 points guaranteed*</h3>
-                <h4 class="recurring">$1200</h4>
+                <!-- <h4 class="recurring">$1200</h4>
                 <p class="recurring">14 payments of $75 and a $150 deposit**</p>
                 <h4 class="one-time">$1080</h4>
-                <p class="one-time">1 payment of $1080 which includes a $135 deposit**</p>
+                <p class="one-time">1 payment of $1080 which includes a $135 deposit**</p> -->
               </div>
               <div class="length">
                 <h4>Guided ACT</h4>
@@ -1040,7 +1047,7 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
                   <p>(385) 300-0906</p>
                 </a>
@@ -1058,7 +1065,7 @@
             </div>
             <h4 class="start">GET STARTED TODAY!</h4>
             <div class="select">
-              <a href="tel:+13853000906">
+              <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                 <p>CALL OR TEXT</p>
                 <p>(385) 300-0906</p>
               </a>
@@ -1197,7 +1204,7 @@
             </ul>
             <h4 class="start">GET STARTED TODAY!</h4>
             <div class="select">
-              <a href="tel:+13853000906">
+              <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                 <p>CALL OR TEXT</p>
                 <p>(385) 300-0906</p>
               </a>
