--- a/public/Dashboard/Dev.html
+++ b/public/Dashboard/Dev.html
@@ -22,13 +22,11 @@
     <script src="../Site Templates/generalFunctions.js"></script>
     <script src="../Site Templates/site-wide.js"></script>
     <script src="Dev.js"></script>
+    <script src="../Dialog.js"></script>
 
   </head>
 
   <body>
-    <section id="loading-screen">
-      <div class="loading-ring"></div>
-    </section>
 
     <section id="add-location-section" class="add-user-section">
       <div id="add-location-div" class="registration-block">
