more test taker

--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -81,6 +81,7 @@
       </div>
       <div>
         <h3>Current Assignments</h3>
+        <div class="assignment box default-background" id="noCurrentAssignments">Hurray no assignments!</div>
         <div>
           <div id="startedAssignments"></div>
           <div id="newAssignments"></div>
@@ -88,6 +89,7 @@
       </div>
       <div>
         <h3>Previous Assignments</h3>
+        <div class="assignment box default-background" id="noPreviousAssignments">No previous assignments.</div>
         <div id="previousAssignments"></div>
       </div>
     </div>
