--- a/public/customer-dashboard.html
+++ b/public/customer-dashboard.html
@@ -51,8 +51,9 @@
           <a href="../new-student.html" data-query="student">Student Info</a>
           <a href="../new-parent.html" data-query="parent">Parent Info</a>
           <a href="../act-sign-up.html" data-query="student,parent">New Program</a>
-          <a href="..//Forms/ACT Daily Log/Daily Log.html" data-query="student">Daily Log</a>
+          <a href="../Forms/ACT Daily Log/Daily Log.html" data-query="student">Daily Log</a>
           <a href="../test-taker.html" data-path="student">Test Taker</a>
+          <a href="../new-assignment.html" data-query="student">New Assignment</a>
           <a href="../payment.html" data-query="parent">Payments</a>
         </div>
       </nav>
