brough prices back

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -458,14 +458,14 @@
           
           <div class="plans">
             <!-- English -->
-            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $16"> -->
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $16">
+            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%"> -->
               <div class="title">
                 <h3>English</h3>
-                <!-- <h4 class="recurring">$160</h4>
+                <h4 class="recurring">$160</h4>
                 <p class="recurring">2 payments of $40 and a $80 deposit**</p>
                 <h4 class="one-time">$144</h4>
-                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p> -->
+                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p>
               </div>
               <div class="length">
                 <h4>ACT Class</h4>
@@ -497,14 +497,14 @@
             </div>
 
             <!--Math -->
-            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $16"> -->
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $16">
+            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%"> -->
               <div class="title">
                 <h3>Math</h3>
-                <!-- <h4 class="recurring">$160</h4>
+                <h4 class="recurring">$160</h4>
                 <p class="recurring">2 payments of $40 and a $80 deposit**</p>
                 <h4 class="one-time">$144</h4>
-                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p> -->
+                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p>
               </div>
               <div class="length">
                 <h4>ACT Class</h4>
@@ -536,14 +536,14 @@
             </div>
 
             <!-- Reading -->
-            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $16"> -->
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $16">
+            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%"> -->
               <div class="title">
                 <h3>Reading</h3>
-                <!-- <h4 class="recurring">$160</h4>
+                <h4 class="recurring">$160</h4>
                 <p class="recurring">2 payments of $40 and a $80 deposit**</p>
                 <h4 class="one-time">$144</h4>
-                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p> -->
+                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p>
               </div>
               <div class="length">
                 <h4>ACT Class</h4>
@@ -575,14 +575,14 @@
             </div>
 
             <!-- Science -->
-            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $16"> -->
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $16">
+            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%"> -->
               <div class="title">
                 <h3>Science</h3>
-                <!-- <h4 class="recurring">$160</h4>
+                <h4 class="recurring">$160</h4>
                 <p class="recurring">2 payments of $40 and a $80 deposit**</p>
                 <h4 class="one-time">$144</h4>
-                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p> -->
+                <p class="one-time">1 payment of $144 which includes a $72 deposit**</p>
               </div>
               <div class="length">
                 <h4>ACT Class</h4>
@@ -939,14 +939,14 @@
 
             <!-- Basics 8 weeks -->
 
-            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $240"> -->
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $240">
+            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%"> -->
               <div class="title">
                 <h3>4 points guaranteed*</h3>
-                <!-- <h4 class="recurring">$2400</h4>
+                <h4 class="recurring">$2400</h4>
                 <p class="recurring">14 payments of $150 and a $300 deposit**</p>
                 <h4 class="one-time">$2160</h4>
-                <p class="one-time">1 payment of $2160 which includes a $270 deposit**</p> -->
+                <p class="one-time">1 payment of $2160 which includes a $270 deposit**</p>
               </div>
               <div class="length">
                 <h4>Guided ACT</h4>
@@ -978,14 +978,14 @@
 
             <!-- Guided 6 weeks -->
 
-            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $180"> -->
-              <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $180">
+              <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%"> -->
               <div class="title">
                 <h3>3 points guaranteed*</h3>
-                <!-- <h4 class="recurring">$1800</h4>
+                <h4 class="recurring">$1800</h4>
                 <p class="recurring">10 payments of $150 and a $300 deposit**</p>
                 <h4 class="one-time">$1620</h4>
-                <p class="one-time">1 payment of $1620 which includes a $270 deposit**</p> -->
+                <p class="one-time">1 payment of $1620 which includes a $270 deposit**</p>
               </div>
               <div class="length">
                 <h4>Guided ACT</h4>
@@ -1017,14 +1017,14 @@
 
             <!-- Guided 8 weeks -->
 
-            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save $120"> -->
-            <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%">
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $120">
+            <!-- <div class="plan-wrapper coming-soon" data-comingSoon="Save 10%"> -->
               <div class="title">
                 <h3>2 points guaranteed*</h3>
-                <!-- <h4 class="recurring">$1200</h4>
+                <h4 class="recurring">$1200</h4>
                 <p class="recurring">14 payments of $75 and a $150 deposit**</p>
                 <h4 class="one-time">$1080</h4>
-                <p class="one-time">1 payment of $1080 which includes a $135 deposit**</p> -->
+                <p class="one-time">1 payment of $1080 which includes a $135 deposit**</p>
               </div>
               <div class="length">
                 <h4>Guided ACT</h4>
