Lesson Series Email Template

--- a/email-templates/act-lesson-series/lesson - Final.html
+++ b/email-templates/act-lesson-series/lesson - Final.html
@@ -45,11 +45,13 @@
     <table role="presentation" border="0" width="100%" cellspacing="0">
       <tr>
         <td style="padding: 30px 0px 30px 0px;">
+          <div style="text-align:center">
           <h2 style="font-size: 28px; margin:0 0 20px 0;">Congratulations!</h2>
+          </div>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             You have successfully made it through our 12 weeks ACT Lesson series! Second only to your GPA, the ACT is the most influential factor to 
-            being accepted to college. Additionally, the ACT is crucial to receiving scholarship money and affording college. As such, we would like to offer 
-            a 20% off promo when signing up for one of our 1-on-1 programs.
+            being accepted to college. Additionally, the ACT is crucial to receiving scholarship money and affording college. As such, we would like to offer you
+            20% off when signing up for one of our guaranteed programs.
           </p>
           <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;">
             Our programs have been optimized to maximize your point increase on the ACT. Rather than a preset curriculum path that you will see with most other ACT prep courses (the same  
