--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -76,15 +76,15 @@
       <input type="text" id="userSearch">
       <div id="userSearchResults"></div>
 
-      <h2 style="margin-bottom: 0px;">Students</h2>
+      <!-- <h2 style="margin-bottom: 0px;">Students</h2>
       <div>
         <div id="tableSelectorWrapper">
           <input type="radio" onchange="setActiveStudentTable()" value="active" name="tableType" checked>Active</input>
           <input type="radio" onchange="setInactiveStudentTable()" value="inactive" name="tableType">Inactive</input>
           <input type="radio" onchange="setAllStudentTable()" value="all" name="tableType">All</input>
-        </div>
+        </div> -->
 
-        <table id="student-table" class="display" width="100%">
+        <!-- <table id="student-table" class="display" width="100%">
           <thead>
             <tr>
               <th>Student</th>
@@ -93,7 +93,7 @@
               <th>Parent</th>
             </tr>
           </thead>
-        </table>
+        </table> -->
 
         <h2 style="margin-bottom: 0px;">Staff</h2>
         <input id="timesheet-dates" style="width: 200px"></input>
