--- a/public/Dashboard/Tutor.html
+++ b/public/Dashboard/Tutor.html
@@ -50,7 +50,8 @@
           <h2 id="locationName"></h2>
           <h2 id="tutor-name"></h2>
         </div>
-        <button class="button" id="exampleDailyLog">Example Daily Log</button>
+        <!-- <button class="button" id="exampleDailyLog">Example Daily Log</button> -->
+        <button class="button"><a href="/view-curriculum" style="color: inherit;">ACT Curriculum</a></button>
         <button class="button" onclick="signOut()">Sign Out</button>
       </div>
       <!-- <div class="input-row">
