--- a/public/act-sign-up.html
+++ b/public/act-sign-up.html
@@ -47,11 +47,11 @@
       <div class="options">
         <h1 class="item" data-program="programPreviews" onclick="programTypeChange(event)">Program Previews</h1>
         <h1 class="item" data-program="actClasses" onclick="programTypeChange(event)">ACT Classes</h1>
-        <h1 class="item selected" data-program="actBasics/Guided" onclick="programTypeChange(event)">ACT Basics / Guided</h1>
+        <h1 class="item selected" data-program="actBasics-Guided" onclick="programTypeChange(event)">ACT Basics / Guided</h1>
       </div>
       <div id="pageLoading"></div>
     </section>
-    <main id="actBasics/Guided" class="open">
+    <main id="actBasics-Guided" class="open">
       <section class="programs">
         <label for="startAfterDate">Start after date</label>
         <input id="startAfterDate"></input>
