--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -23,10 +23,11 @@
         inlineMath: [['$', '$'], ['\\(', '\\)']]
       },
       svg: {
-        fontCache: 'global'
+        fontCache: 'global',
+        scale: 1,
       },
       chtml: {
-        scale: 1.1
+        scale: 1,
       },
       options: {
         enableMenu: false,
@@ -48,6 +49,7 @@
   <script src="../Site Templates/site-wide.js"></script>
   <script src="../test-taker-svg.js"></script>
   <script src="../Timer.js"></script>
+  <script src="../Time.js"></script>
   <script src="../ACT-Passage.js"></script>
   <script src="../ACT-Question.js"></script>
   <script src="../ACT-Assignment-Timeline.js"></script>
