--- a/public/testEditor.html
+++ b/public/testEditor.html
@@ -24,9 +24,23 @@
       },
       svg: {
         fontCache: 'global'
+      },
+      chtml: {
+        scale: 1.1
+      },
+      options: {
+        enableMenu: false,
+        menuOptions: {
+          settings: {
+            inTabOrder: false,
+          }
+        },
+        skipHtmlTags: [
+          'script', 'noscript', 'style', 'textarea', 'pre', 'code', 'annotation', 'annotation-xml'
+        ],
       }
     };
-    </script>
+  </script>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
