--- a/public/testEditor.html
+++ b/public/testEditor.html
@@ -51,6 +51,9 @@
   <link async rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"/>
   <script async src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 
+  <!-- private libraries -->
+  <script src="Dialog.js"></script>
+
   <!-- site wide -->
   <script src="Site Templates/site-wide.js" defer></script>
   <script src="Site Templates/generalFunctions.js" defer></script>
